--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,12 @@
                 <h1>Este es el Titulo atractivo e interesante del post
                 </h1>
                 <p>Y este es el parrofo de inicio donde vamos a explicar las cosas increibles que se peuden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir informacion
+                    y tus ideas.
+                    Mucho mas  que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
+                    Pero estadisticamente no lo eres ...por ahora ....
+                </p>
+           </div>
            </div>
     </body>
 </html>
