--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
        <div id="container">
            <div id="cabecera">
             Hyperblog 
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog maestro</span>
            </div>
            <div id ="post">
                 <h1>Este es el Titulo atractivo e interesante del post
@@ -17,6 +17,9 @@
                     y tus ideas.
                     Mucho mas  que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                     Pero estadisticamente no lo eres ...por ahora ....
+                </p>
+                <p>
+                    Suscribete y dale like
                 </p>
            </div>
            </div>
