--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
        <div id="container">
            <div id="cabecera">
+               <img id=logo src="imagenes/dragon.png"/>
             Hyperblog 
             <span id="tagline">Tu blog de cabecera_actual</span>
            </div>
@@ -25,3 +26,4 @@
            </div>
     </body>
 </html>
+                                            
