--- a/blogpost.html
+++ b/blogpost.html
@@ -1,27 +1,30 @@
 <html>
-    <head>
-        <title>BIENVENIDO A HYPERBLOG 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css" />
-    </head>
-    <body>
-       <div id="container">
-           <div id="cabecera">
-            Hyperblog 
+
+<head>
+    <title>BIENVENIDO A HYPERBLOG 2.0</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+</head>
+
+<body>
+    <div id="container">
+        <div id="cabecera">
+            Hyperblog
             <span id="tagline">Tu blog de cabecera_actual</span>
-           </div>
-           <div id ="post">
-                <h1>Este es el Titulo atractivo e interesante del post
-                </h1>
-                <p>Y este es el parrofo de inicio donde vamos a explicar las cosas increibles que se peuden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir informacion
-                    y tus ideas.
-                    Mucho mas  que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
-                    Pero estadisticamente no lo eres ...por ahora ....
-                </p>
-                <p>
-                    Suscribete y dale like
-                </p>
-           </div>
-           </div>
-    </body>
+        </div>
+        <div id="post">
+            <h1>Este es el Titulo atractivo e interesante del post
+            </h1>
+            <p>Y este es el parrofo de inicio donde vamos a explicar las cosas increibles que se peuden hacer con ramas</p>
+            <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres ...por ahora ....
+            </p>
+            <p>
+                Suscribete y dale like
+            </p>
+        </div>
+        <div id="footer">
+            Hecho con amor en platzi
+        </div>
+    </div>
+</body>
+
 </html>
