--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>BIENVENIDO A HYPERBLOG 2.0</title>
+    <title>HYPERBLOG 2.0 del futuro</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
 
